--- a/app/src/main/res/layout/loginview.xml
+++ b/app/src/main/res/layout/loginview.xml
@@ -2,82 +2,86 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/loginview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/loginview"
-    android:background="@drawable/splash_bg_compressed"
-    >
+    android:background="@drawable/splash_bg_compressed">
+
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/explosion_compressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.8"
-        android:src="@drawable/explosion_compressed"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/buildings_compressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.4"
-        android:src="@drawable/buildings_compressed"
-        android:scaleType="fitXY"
-        >
-    </ImageView>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
+        android:id="@+id/aaveglogo"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:id="@+id/aaveglogo"
+        android:layout_marginTop="20dp"
         android:src="@drawable/aaveglogowhite"
-        android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
-    </ImageView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:paddingEnd="40dp"
-        android:paddingBottom="12dp"
-        android:paddingTop="12dp"
-        android:paddingStart="12dp"
-        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/aaveglogo"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="32dp"
-        android:id="@+id/loginBanner"
-        android:text="LOGIN"
-        android:background="#FFF"
-        android:textColor="#000"
-        app:autoSizeTextType="uniform"
-        app:autoSizeMinTextSize="14sp"
-        app:autoSizeMaxTextSize="100sp"
-        app:autoSizeStepGranularity="2sp" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintHeight_percent="0.55"
-        app:layout_constraintTop_toBottomOf="@id/loginBanner"
-        app:cardBackgroundColor="#D1000000"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        >
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintLeft_toRightOf="@+id/loginBanner"
+        app:layout_constraintTop_toBottomOf="@id/aaveglogo" />
 
-        <LinearLayout
+    <TextView
+        android:id="@+id/loginBanner"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#FFF"
+        android:maxLines="1"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="15dp"
+        android:paddingRight="10dp"
+        android:text="LOGIN"
+        android:textAlignment="center"
+        android:textColor="#000"
+        app:autoSizeMaxTextSize="100sp"
+        app:autoSizeMinTextSize="14sp"
+        app:autoSizeStepGranularity="2sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        app:layout_constraintRight_toLeftOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/aaveglogo"
+        app:layout_constraintWidth_percent="0.5" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:cardBackgroundColor="#D1000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.55"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="20dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"
-            >
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/et_login_username"
@@ -91,7 +95,10 @@
                 android:textColor="#FFFFFF"
                 android:textColorHint="#90FFFFFF"
                 android:textSize="18sp"
-                android:textStyle="italic" />
+                android:textStyle="italic"
+                app:layout_constraintBottom_toTopOf="@+id/et_login_password"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <EditText
                 android:id="@+id/et_login_password"
@@ -105,7 +112,12 @@
                 android:inputType="textPassword"
                 android:textColorHint="#90FFFFFF"
                 android:textSize="18sp"
-                android:textStyle="italic" />
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/btn_login_login"
@@ -115,30 +127,39 @@
                 android:background="@drawable/buttoncustom"
                 android:text="Login"
                 android:textColor="#000"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_login_password" />
 
             <ProgressBar
                 android:id="@+id/progress_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_login_login"
+                tools:layout_editor_absoluteX="-44dp" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:layout_width="wrap_content"
         android:id="@+id/tv_made_with"
-        android:textColor="#FFFFFF"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="8dp"
+        android:text="Made with♥by Delta Force &amp; Aaveg Design Team"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="8dp"
-        android:textSize="12sp"
-        android:text="Made with♥by Delta Force &amp; Aaveg Design Team"
-        >
-    </TextView>
+        app:layout_constraintStart_toStartOf="parent"></TextView>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
