--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,161 +3,168 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
+        android:layout_height="match_parent"
+        android:background="@color/darktransparent">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <RelativeLayout
-                android:id="@+id/hostel_img_parent"
                 android:layout_width="match_parent"
-                android:layout_height="250dp">
-                <ImageView
-                    android:id="@+id/home_hostel_img"
+                android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:id="@+id/hostel_img_parent"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:foreground="#af000000"
-                    android:src="@drawable/agate" />
-                <TextView
-                    android:id="@+id/overall_place"
+                    android:layout_height="250dp">
+                    <ImageView
+                        android:id="@+id/home_hostel_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:foreground="#af000000"
+                        android:src="@drawable/agate" />
+                    <TextView
+                        android:id="@+id/overall_place"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:lines="2"
+                        android:text="1st\nPlace"
+                        android:textSize="35dp" />
+
+                </RelativeLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/hostel_cup_cards"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:lines="2"
-                    android:text="1st\nPlace"
-                    android:textSize="35dp" />
+                    android:layout_below="@+id/hostel_img_parent"
+                    android:layout_marginTop="-75dp"
+                    android:orientation="horizontal">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:layout_margin="8dp"
+                        app:cardCornerRadius="15dp"
+                        android:layout_weight="1">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/culturals_cup"
+                                android:foreground="#af000000"/>
+
+                            <TextView
+                                android:id="@+id/culturals_place"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:lines="2"
+                                android:text="Culturals:\n2st"
+                                android:textSize="25dp" />
+
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:layout_margin="8dp"
+                        app:cardCornerRadius="15dp"
+                        android:layout_weight="1">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/sports_cup"
+                                android:foreground="#af000000"/>
+
+                            <TextView
+                                android:id="@+id/sports_place"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:lines="2"
+                                android:text="Sports:\n3rd"
+                                android:textSize="25dp" />
+
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        app:cardCornerRadius="15dp"
+                        android:layout_margin="8dp"
+                        android:layout_weight="1">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/spectrum_cup"
+                                android:foreground="#af000000"/>
+
+                            <TextView
+                                android:id="@+id/spectrum_place"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:lines="2"
+                                android:text="Spectrum:\n1st"
+                                android:textSize="25dp" />
+
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/reccent_events_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/hostel_cup_cards"
+                    android:layout_marginTop="16dp"
+                    android:gravity="center_horizontal"
+                    android:text="Recent Events"
+                    android:textSize="30dp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/home_hostel_events"
+                    android:layout_width="match_parent"
+
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/reccent_events_text"
+                    android:layout_marginTop="16dp" />
 
             </RelativeLayout>
+        </ScrollView>
 
+    </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/hostel_cup_cards"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/hostel_img_parent"
-                android:layout_marginTop="-75dp"
-                android:orientation="horizontal">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:layout_margin="8dp"
-                    app:cardCornerRadius="15dp"
-                    android:layout_weight="1">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/culturals_cup"
-                            android:foreground="#af000000"/>
-
-                        <TextView
-                            android:id="@+id/culturals_place"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:lines="2"
-                            android:text="Culturals:\n2st"
-                            android:textSize="25dp" />
-
-                    </RelativeLayout>
-                </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:layout_margin="8dp"
-                    app:cardCornerRadius="15dp"
-                    android:layout_weight="1">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/sports_cup"
-                            android:foreground="#af000000"/>
-
-                        <TextView
-                            android:id="@+id/sports_place"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:lines="2"
-                            android:text="Sports:\n3rd"
-                            android:textSize="25dp" />
-
-                    </RelativeLayout>
-                </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    app:cardCornerRadius="15dp"
-                    android:layout_margin="8dp"
-                    android:layout_weight="1">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/spectrum_cup"
-                            android:foreground="#af000000"/>
-
-                        <TextView
-                            android:id="@+id/spectrum_place"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:lines="2"
-                            android:text="Spectrum:\n1st"
-                            android:textSize="25dp" />
-
-                    </RelativeLayout>
-                </androidx.cardview.widget.CardView>
-
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/reccent_events_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/hostel_cup_cards"
-                android:layout_marginTop="16dp"
-                android:gravity="center_horizontal"
-                android:text="Recent Events"
-                android:textSize="30dp" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/home_hostel_events"
-                android:layout_width="match_parent"
-
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/reccent_events_text"
-                android:layout_marginTop="16dp" />
-
-        </RelativeLayout>
-    </ScrollView>
 
 
 
