--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,55 +4,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6f000000">
-    <Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/toolbar_main"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@android:color/transparent"
-        android:theme="@style/ToolBarStyle"
-        >
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="5dp"
-            app:srcCompat="@drawable/logoutbutton"
-            android:tint="#FFFFFF"
-            android:layout_gravity="end"
-            android:scaleType="centerCrop"
-            android:id="@+id/logout" />
-
-    </Toolbar>
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-        <ScrollView
+        android:layout_height="match_parent">
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <Toolbar
+                android:id="@+id/toolbar_main"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:theme="@style/ToolBarStyle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/logout"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="end"
+                    android:padding="5dp"
+                    android:scaleType="centerCrop"
+                    android:tint="#FFFFFF"
+                    app:srcCompat="@drawable/logoutbutton" />
+
+            </Toolbar>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <LinearLayout
                     android:id="@+id/hostel_img_parent"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:layout_margin="8dp">
+
                     <ImageView
                         android:id="@+id/home_hostel_img"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_marginTop="20dp"
                         android:layout_height="match_parent"
+                        android:layout_marginTop="20dp"
+                        android:layout_weight="1"
                         android:src="@drawable/agatelogo" />
+
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:gravity="center_vertical">
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/overall_place"
@@ -60,16 +65,16 @@
                             android:layout_height="wrap_content"
                             android:layout_centerHorizontal="true"
                             android:layout_centerVertical="true"
+                            android:fontFamily="@font/gobold_regular"
                             android:gravity="center"
                             android:textColor="#ffffff"
-                            android:fontFamily="@font/gobold_regular"
                             android:textSize="80sp" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textAlignment="center"
                             android:text="OVERALL"
+                            android:textAlignment="center"
                             android:textColor="#ffffff"
                             android:textSize="30sp" />
 
@@ -90,8 +95,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="15dp"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        app:cardCornerRadius="15dp">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -101,9 +106,9 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
+                                android:foreground="#6f000000"
                                 android:scaleType="fitEnd"
-                                android:src="@drawable/culturals_cup"
-                                android:foreground="#6f000000"/>
+                                android:src="@drawable/culturals_cup" />
 
                             <TextView
                                 android:id="@+id/culturals_place"
@@ -115,23 +120,25 @@
                                 android:gravity="center"
                                 android:lines="2"
                                 android:textSize="40dp" />
+
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentBottom="true"
-                                android:text="Culturals"
                                 android:gravity="center"
-                                android:textSize="20dp"/>
+                                android:text="Culturals"
+                                android:textSize="20dp" />
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
                         android:id="@+id/sports_place_card"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="15dp"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        app:cardCornerRadius="15dp">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -141,8 +148,8 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:src="@drawable/sports_cup"
-                                android:foreground="#6f000000"/>
+                                android:foreground="#6f000000"
+                                android:src="@drawable/sports_cup" />
 
                             <TextView
                                 android:id="@+id/sports_place"
@@ -154,33 +161,36 @@
                                 android:gravity="center"
                                 android:lines="2"
                                 android:textSize="40dp" />
+
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentBottom="true"
-                                android:text="Sports"
                                 android:gravity="center"
-                                android:textSize="20dp"/>
+                                android:text="Sports"
+                                android:textSize="20dp" />
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
                         android:id="@+id/spectrum_place_card"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        app:cardCornerRadius="15dp"
                         android:layout_margin="8dp"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        app:cardCornerRadius="15dp">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical">
+
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:src="@drawable/spectrum_cup"
-                                android:foreground="#6f000000"/>
+                                android:foreground="#6f000000"
+                                android:src="@drawable/spectrum_cup" />
 
                             <TextView
                                 android:id="@+id/spectrum_place"
@@ -191,13 +201,14 @@
                                 android:gravity="center"
                                 android:lines="2"
                                 android:textSize="40dp" />
+
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentBottom="true"
-                                android:text="Spectrum"
                                 android:gravity="center"
-                                android:textSize="20dp"/>
+                                android:text="Spectrum"
+                                android:textSize="20dp" />
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
@@ -222,16 +233,17 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/reccent_events_text"
                     android:layout_marginTop="16dp" />
+
                 <TextView
                     android:id="@+id/tv_made_with_home"
                     android:layout_width="match_parent"
-                    android:background="#6f000000"
-                    android:gravity="center"
-                    android:layout_below="@+id/home_hostel_events"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/home_hostel_events"
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="bottom|center"
                     android:layout_marginBottom="8dp"
+                    android:background="#6f000000"
+                    android:gravity="center"
                     android:text="Made with♥by Delta Force &amp; Aaveg Design Team"
                     android:textColor="#FFFFFF"
                     android:textSize="12sp"
@@ -240,12 +252,9 @@
                     app:layout_constraintStart_toStartOf="parent"></TextView>
 
             </RelativeLayout>
-        </ScrollView>
 
-    </LinearLayout>
-
-
-
+        </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
