--- a/app/src/main/res/layout/fragment_clusters.xml
+++ b/app/src/main/res/layout/fragment_clusters.xml
@@ -9,15 +9,11 @@
         android:id="@+id/event_header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
         android:background="@color/events_header_bg"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp">
+        android:paddingBottom="10dp">
 
         <TextView
             android:id="@+id/event_detail_title"
