--- a/app/src/main/res/layout/layout_sponsors_fragment.xml
+++ b/app/src/main/res/layout/layout_sponsors_fragment.xml
@@ -9,15 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:padding="4dp"
+        android:padding="8dp"
         android:text="SPONSORS"
+        android:elevation="4dp"
         android:fontFamily="@font/comfortaa_bold"
+        android:background="@color/tab"
         android:gravity="center"
         >
     </TextView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_sponsor_list"
